cluster/apps/services/forecastle/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-forecastle
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`forecastle.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        # - name: basicauth
        - name: crowdsec-traefik-bouncer
        - name: rfc1918
      services:
        - name: forecastle
          namespace: services
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
